[refactor / feat] Refatorando código existente e aumentando segurança das rotas